[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/FrogDad.gd" type="Script" id=1]
[ext_resource path="res://Art/frog_dad_sprite_sheet_1.png" type="Texture" id=2]
[ext_resource path="res://Art/Untitled_Artwork.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PickupZone.gd" type="Script" id=4]
[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Temporary Clipart/questicon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Quest.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/DialogueBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/UserInterface.gd" type="Script" id=10]
[ext_resource path="res://Temporary Clipart/DialogueBox.png" type="Texture" id=11]
[ext_resource path="res://Scenes/CloseUpNote.gd" type="Script" id=12]
[ext_resource path="res://Scenes/ToggleQuestButton.gd" type="Script" id=13]

[sub_resource type="CapsuleShape2D" id=13]
radius = 20.0006
height = 190.0

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2512, 0, 628, 2048 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 3140, 0, 628, 2048 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1256, 0, 628, 2048 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1884, 0, 628, 2048 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 760, 1501 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 760, 0, 760, 1501 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1520, 0, 760, 1501 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2280, 0, 760, 1501 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 3040, 0, 760, 1501 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 166, 322.5 )

[sub_resource type="DynamicFont" id=15]
size = 31
font_data = ExtResource( 5 )

[node name="FrogDad" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
inventory_path = NodePath("UserInterface/Inventory")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 326 )
rotation = 1.57079
shape = SubResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.461783, 0.461783 )
frames = SubResource( 3 )
animation = "walk"
frame = 2
playing = true

[node name="PickupZone" type="Area2D" parent="."]
position = Vector2( 7, 24.5 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 14 )

[node name="QuestLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -14.0
margin_right = 135.5
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "enter text here"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="DialogueBox" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( -683.333, 250 )
z_index = 1000

[node name="CloseUpNote" type="TextureRect" parent="."]
visible = false
margin_left = -490.0
margin_top = -281.0
margin_right = -148.0
margin_bottom = -83.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="CloseButton" type="Button" parent="CloseUpNote"]
margin_left = 298.4
margin_top = 16.4
margin_right = 320.4
margin_bottom = 36.4
text = "X"

[node name="ToggleQuestButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 666.0
margin_top = -589.0
margin_right = 1178.0
margin_bottom = 1744.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 6 )
script = ExtResource( 13 )

[node name="Quest" parent="ToggleQuestButton" instance=ExtResource( 7 )]
visible = false
position = Vector2( -2664, 2340 )
z_index = 1000
inventory_path = NodePath("../../UserInterface/Inventory")

[node name="UserInterface" type="CanvasLayer" parent="."]
visible = false
scale = Vector2( 3, 3 )
transform = Transform2D( 3, 0, 0, 3, 0, 0 )
script = ExtResource( 10 )

[node name="Inventory" parent="UserInterface" instance=ExtResource( 9 )]
scale = Vector2( 1, 1 )
item_list = {
0: [ "Fly", 1 ],
1: [ "Log", 98 ],
2: [ "Cloth", 4 ]
}

[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
[connection signal="pressed" from="CloseUpNote/CloseButton" to="CloseUpNote" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ToggleQuestButton" to="ToggleQuestButton/Quest" method="_on_ToggleQuestButton_pressed"]
